# fruitninjabot

./: CMakeLists.txt~  README.md  fruitNinja.urdf  fruit_ninja.py  fruit_ninja_gui.py  package.xml~  setup.py~
project_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
project_ws/devel/lib/pkgconfig/: fruitninja.pc  projectdemos.pc
project_ws/devel/lib/python3/dist-packages/fruitninja/: __init__.py
project_ws/devel/share/fruitninja/cmake/: fruitninjaConfig.cmake
project_ws/devel/share/projectdemos/cmake/: projectdemosConfig.cmake
project_ws/src/fruitninja/: CMakeLists.txt
project_ws/src/fruitninja/launch/: fruit_ninja_gui.launch  rviz.launch  rviz.launch~  rvizgui.launch  rvizgui.launch~
project_ws/src/fruitninja/lib/fruitninja/: kinematics2.py
project_ws/src/fruitninja/rviz/: view133.rviz  view133v2.rviz  viewatlas.rviz
project_ws/src/fruitninja/scripts/: fruit_ninja-specify_velocity  fruit_ninja.py  fruit_ninja_gui.py  fruit_ninja_gui.py~  fruit_ninja_old.py  fruit_ninja_specify_velocity.py
project_ws/src/fruitninja/urdf/: LittleDog.urdf  fruitNinja.urdf  fruitNinja.urdf~  sevenR.urdf  sixR.urdf
project_ws/src/fruitninja/urdf/Sabre/: manifest.xml
project_ws/src/fruitninja/urdf/Sabre/meshes/: Sabre.STL
project_ws/src/fruitninja/urdf/Sabre/urdf/: Sabre.SLDPRT.urdf
